Cards now have an auto height preventing overflow

--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -21,7 +21,7 @@ ul.horizontal-list {
   padding: 1em;
   border: 1px var(--text) solid;
   width: 11em;
-  height: 11em;
+  height: auto;
   text-align: center;
   font-size: 1em;
   align-items: center;
